fix: navigation links on mobile view

--- a/src/core/ui/header/HeaderMobile.css
+++ b/src/core/ui/header/HeaderMobile.css
@@ -25,7 +25,8 @@
 }
 
 .nav.mobile {
-    position: fixed;
+    position: absolute;
+    height: auto;
     top: var(--header-height);
     left: 0;
     width: 100%;
